Add Trainer Controller test cases