@@ -1,5 +1,6 @@
 package com.epam.esm.gym.web.data;
 
+import com.epam.esm.gym.domain.Specialization;
 import com.epam.esm.gym.dto.trainee.TraineeProfile;
 import com.epam.esm.gym.dto.trainer.TrainerProfile;
 import com.epam.esm.gym.dto.trainer.TrainerRequest;
@@ -8,7 +9,6 @@ import com.epam.esm.gym.dto.training.TrainingResponse;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class DataMapper {
 
@@ -16,7 +16,7 @@ public class DataMapper {
         return TrainerRequest.builder()
                 .firstName((String) trainers.get("firstName"))
                 .lastName((String) trainers.get("lastName"))
-                .specialization((String) trainers.get("specialization"))
+                .specialization(Specialization.valueOf(((String) trainers.get("specialization")).toUpperCase()))
                 .build();
     }
 
@@ -50,26 +50,26 @@ public class DataMapper {
                 .build();
     }
 
-    public static List<TraineeProfile> getTraineeProfile(List<Map<String, Object>> traineeMaps) {
-        return traineeMaps.stream().map(map -> TraineeProfile.builder()
+    public static TraineeProfile getTraineeProfile(Map<String, Object> map) {
+        return TraineeProfile.builder()
                 .username((String) map.get("username"))
                 .firstName((String) map.get("firstName"))
                 .lastName((String) map.get("lastName"))
                 .dateOfBirth(LocalDate.parse((String) map.get("dateOfBirth")))
                 .address((String) map.get("address"))
                 .active((Boolean) map.get("active"))
-                .build()).toList();
+                .build();
+    }
+
+    public static List<TraineeProfile> getTraineeProfile(List<Map<String, Object>> traineeMaps) {
+        return traineeMaps.stream()
+                .map(DataMapper::getTraineeProfile)
+                .toList();
     }
 
     public static List<TrainerProfile> getTrainerProfiles(List<Map<String, Object>> trainerMaps) {
         return trainerMaps.stream()
-                .map(data -> TrainerProfile.builder()
-                        .username((String) data.get("username"))
-                        .firstName((String) data.get("firstName"))
-                        .lastName((String) data.get("lastName"))
-                        .specialization((String) data.get("specialization"))
-                        .active((Boolean) data.get("active"))
-                        .build())
-                .collect(Collectors.toList());
+                .map(DataMapper::getTrainerProfile)
+                .toList();
     }
 }
